--- a/index.html
+++ b/index.html
@@ -10,5 +10,13 @@
 	<p><b>Voornaam:</b> Josh</p>
 	<p><b>Achternaam:</b> Verboom</p>
 	<p><b>Leeftijd:</b> 17</p>
+	<br>
+	<h1>Wie doe ik?</h1>
+	<p>Ik ben een beginnend ICT en ik studeer Applicatie Ontwikkeling (Niveau 4) aan het Da Vinci College in Gorinchem.
+	<br>De reden waarom ik voor die opleiding heb gekozen is omdat ik al redelijk bezig ben met Web Development en ik dus hier meer bij wil leren.
+	<br>(En omdat ik leerplichtig ben :P)
+	<br>
+	Naast school doe ik ook aan Youtube. Op Youtube heb ik 2 kanalen, een game- en een motovlog kanaal.
+	<br><b>Gaming kanaal:</b> Mijn gamekanaal heet <a href="http://youtube.com/user/justnlgaminghd">JustNLGamingHD</a>. </p>
 </body>
 </html>
