Updated with css

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Portolio - Over mij</title>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 	<h1>Over mij</h1>
@@ -17,6 +18,8 @@
 	<br>(En omdat ik leerplichtig ben :P)
 	<br>
 	Naast school doe ik ook aan Youtube. Op Youtube heb ik 2 kanalen, een game- en een motovlog kanaal.
-	<br><b>Gaming kanaal:</b> Mijn gamekanaal heet <a href="http://youtube.com/user/justnlgaminghd">JustNLGamingHD</a>. </p>
+	<br><b>Gaming kanaal:</b> Mijn gamekanaal heet <a href="http://youtube.com/user/justnlgaminghd" target="_blank">JustNLGamingHD</a>. Op dit kanaal upload ik video's van games zoals Euro Truck Simulator 2, Minecraft en nog wat games. 
+	<br><b>Motovlog kanaal:</b> Mijn motovlog kanaal heet <a href="https://www.youtube.com/channel/UCcpWMJxlLdgl3_BR9LT-Y2g" target="_blank">OfficialPuncake</a>. Op dit kanaal upload ik video's waarin ik op mijn Derbi (schakel brommer) rond rij.
+	<br> </p>
 </body>
 </html>
